src/objects/CaseComment__c.object
<CustomObject>
    <fields>
        <fullName>Autor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Autor</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ComentariosCaso</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CancelamentoMagazine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelamento de pedido - Magazine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Caso__c</fullName>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>ComentariosCaso</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ComentarioPrivadoFlag__c</fullName>
        <formula>IF((  Private__c =True), IMAGE ( &quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow&quot;),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comentário Privado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comentario__c</fullName>
        <label>Comentário</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailNotificacao__c</fullName>
        <description>Campo utilizado para receber o e-mail do destinatário da notificação, podendo ser Customer ou Seller, o que será definido em outro workflow que validará qual o tipo de registro que criou o comentário.</description>
        <label>Email de notificação</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MagazineMediation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Precisa da mediação do Magazine?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>true</defaultValue>
        <description>É uma mensagem para o logista?</description>
        <label>Mensagem para o logista</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TipoAutor__c</fullName>
        <label>Tipo Autor</label>
        <picklist>
            <picklistValues>
                <fullName>Lojista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine Luiza</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Comentário do Caso</label>
    <nameField>
        <label>ID-Comentario</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comentários do Caso</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>